--- a/blog-reading/FBM/1.md
+++ b/blog-reading/FBM/1.md
@@ -1,3 +1,4 @@
+# 1.前言与背景
 
 ## 珍珠与母亲——梁宁作序
 
@@ -8,13 +9,13 @@
 
 心理学上的“自我设限”和“自我指责”，是阻止你行动的第一座大山……
 
-知廉耻荣辱是好事，但不要被自己的上进心异化。停止对自己的judge，才能迈出i行动的第一步。关于如何清除自己头脑里的垃圾，我推荐b站上up主@Rosiellu的[“人生剧本”系列视频](https://www.bilibili.com/video/BV1ra411A7qW)，有异曲同工之妙。
-
-
+知廉耻荣辱是好事，但不要被自己的上进心异化。停止对自己的judge，才能迈出第一步。关于如何清除自己头脑里的垃圾，我推荐b站上up主@Rosiellu的[“人生剧本”系列视频](https://www.bilibili.com/video/BV1ra411A7qW)，有异曲同工之妙。
 
 
 
 ## ——孙云晓作序
+
+
 
 ## 作者以及更多背景——孔令新作序
 
