--- a/blog-reading/FBM/1.md
+++ b/blog-reading/FBM/1.md
@@ -1,20 +1,35 @@
+
+![](1_files/1.jpg)
+![](1_files/2.jpg)
+
+行为是可以被设计的，习惯是可以养成的。类似于苹果手机的快捷指令，学会这套方法后，用户可以根据自己的实际情况自定义设计行为以应对瞬息万变的社会，帮你找回生活的秩序。
+
 # 1.前言与背景
 
 ## 珍珠与母亲——梁宁作序
 
 - 树立自信，清除掉你头脑中的负面情绪。
-- 
-- 
+
+- 我们可以做自己的温柔母亲，指导自己慢慢达成目标。
+
+- 蚌温柔包裹沙砾，才形成珍珠。用积极和温柔的力量对抗既定的挑战，是获得幸福的密码。
 
 
-心理学上的“自我设限”和“自我指责”，是阻止你行动的第一座大山……
-
-知廉耻荣辱是好事，但不要被自己的上进心异化。停止对自己的judge，才能迈出第一步。关于如何清除自己头脑里的垃圾，我推荐b站上up主@Rosiellu的[“人生剧本”系列视频](https://www.bilibili.com/video/BV1ra411A7qW)，有异曲同工之妙。
-
-
+阻碍行动的第一座大山是负面情绪，心理学上常把他们叫做“自我设限”和“自我指责”。知廉耻荣辱是好事，但不要被自己的上进心异化。停止对自己的judge，才能迈出第一步。关于如何清除自己头脑里的垃圾，我推荐b站上up主@Rosiellu的[“人生剧本”系列视频](https://www.bilibili.com/video/BV1ra411A7qW)，有异曲同工之妙。提升行动力首先要摒弃抱怨，养成微习惯。微习惯的要点在于：微量开始，超额完成。只要开始行动，把行动坚持下去，就能形成习惯。 三分钟热度： 动机如果就是“尝鲜”，第一次行动后，这个目的达到了，坚持下去的动机就不复存在了，所以才表现为三分钟热度。 如果确实是打算养成习惯，就没有激励也不行。
 
 ## ——孙云晓作序
 
+- 注重微习惯的力量。
+
+- 简单、简单、还是简单。
+
+- 发挥人的主观能动性，通过行为设计养成习惯。
+
+- 检查三要素是否齐全。
+
+- 及时庆祝。
+
+“简单”的法则出现在很多的产品中，从苹果的产品，到各类效率软件，再到各种创意感满满的家具中……简单是设计的全行业通用法则，简单就是设计感的源泉。
 
 
 ## 作者以及更多背景——孔令新作序
@@ -23,4 +38,24 @@
 
 - 服务业需要行为设计实现更好的服务体验
 
-- 
+理解有些出入。并非“习惯养成可以是轻松愉悦的”，而是“习惯养成必然是轻松愉悦的”。潜意识将微习惯和积极情绪关联起来，而植入潜意识的才可以成为习惯。
+
+## 测试题
+
+- 人们不能做到一些“很想达成的事情”，不是因为能力不足，而是因为这些动机本身就是不可靠的→识别一些不可靠的动机；“愿望”和“需求”
+
+- 作者系英语语言学专业，亚里士多德修辞学中关于说服模式的书启发了他
+
+- 积极情绪的意义。❓通过积极情绪带动潜意识进行学习行为。
+
+## 中文版序
+
+- 福格行为模型是社会学中研究人类活动的基础。
+
+- B=MAT→B=MAP，trigger→prompt，触发→提示
+
+- 重复不是习惯的必要条件
+
+- 要重视积极情绪的意义
+
+- 重复看本书
