--- a/blog-reading/FBM/1.md
+++ b/blog-reading/FBM/1.md
@@ -1,5 +1,5 @@
 
-![](1_files/1.jpg)
+![](1_files/1.png)
 ![](1_files/2.jpg)
 
 行为是可以被设计的，习惯是可以养成的。类似于苹果手机的快捷指令，学会这套方法后，用户可以根据自己的实际情况自定义设计行为以应对瞬息万变的社会，帮你找回生活的秩序。
@@ -14,10 +14,11 @@
 
 - 蚌温柔包裹沙砾，才形成珍珠。用积极和温柔的力量对抗既定的挑战，是获得幸福的密码。
 
+阻碍行动的第一座大山是负面情绪，心理学上常把他们叫做“自我设限”和“自我指责”。知廉耻荣辱是好事，但不要被自己的上进心异化。停止对自己的judge，才能迈出第一步。关于如何清除自己头脑里的垃圾，我推荐b站上up主@Rosiellu的[“人生剧本”系列视频](https://www.bilibili.com/video/BV1ra411A7qW)，有异曲同工之妙。提升行动力首先要摒弃抱怨，养成微习惯。
 
-阻碍行动的第一座大山是负面情绪，心理学上常把他们叫做“自我设限”和“自我指责”。知廉耻荣辱是好事，但不要被自己的上进心异化。停止对自己的judge，才能迈出第一步。关于如何清除自己头脑里的垃圾，我推荐b站上up主@Rosiellu的[“人生剧本”系列视频](https://www.bilibili.com/video/BV1ra411A7qW)，有异曲同工之妙。提升行动力首先要摒弃抱怨，养成微习惯。微习惯的要点在于：微量开始，超额完成。只要开始行动，把行动坚持下去，就能形成习惯。 三分钟热度： 动机如果就是“尝鲜”，第一次行动后，这个目的达到了，坚持下去的动机就不复存在了，所以才表现为三分钟热度。 如果确实是打算养成习惯，就没有激励也不行。
+微习惯的要点在于：微量开始，超额完成。只要开始行动，把行动坚持下去，就能形成习惯。
 
-## ——孙云晓作序
+## 全书内容梳理——孙云晓作序
 
 - 注重微习惯的力量。
 
@@ -38,7 +39,7 @@
 
 - 服务业需要行为设计实现更好的服务体验
 
-理解有些出入。并非“习惯养成可以是轻松愉悦的”，而是“习惯养成必然是轻松愉悦的”。潜意识将微习惯和积极情绪关联起来，而植入潜意识的才可以成为习惯。
+理解似乎有些出入。并非“习惯养成可以是轻松愉悦的”，而是“习惯养成必然是轻松愉悦的”。潜意识将微习惯和积极情绪关联起来，而植入潜意识的才可以成为习惯。
 
 ## 测试题
 
