--- a/blog-reading/FBM/2.md
+++ b/blog-reading/FBM/2.md
@@ -1,1 +1,61 @@
- 三分钟热度： 动机如果就是“尝鲜”，第一次行动后，这个目的达到了，坚持下去的动机就不复存在了，所以才表现为三分钟热度。 如果确实是打算养成习惯，就没有激励也不行。
+# 前言 行为设计的价值
+
+## 设计习惯并成功改变的三件事：
+
+- 停止自我批评
+  
+- 把愿望拆解为微习惯
+
+- 每一次错误都是新发现，利用它们不断改进
+
+## 从小改变着手的5个原因
+
+- 利用碎片时间
+
+- 可以立刻行动
+
+毛伊习惯（Maui Habit）：清晨起床立刻说出：“今天又是美好的一天！”
+
+习惯模板：在……时候→我会……
+
+- 无需担心失败
+
+蜥蜴脑善于判断一件事完成的困难程度，如果过于困难，就不想开始了。
+
+- 每次咬一小口，积少成多
+
+- 不需要依赖动机和意志力，那太不可靠
+
+
+## 微习惯
+
+## 行为的奥秘：ABC三步骤 the anatomy of tiny habits
+
+1. Anchor：锚点时刻
+2. Behavior：新的微习惯
+3. Celebration:即时庆祝
+
+## 微习惯养成
+
+每天一起床→完成毛伊习惯(今天又是美好的一天)→刷学习强国视频→洗漱
+
+进入家门→洗衣服
+
+晚上刷牙后→使用牙线清洁一颗牙
+
+
+
+
+
+
+
+
+
+
+
+ 
+ 
+ 
+ 
+ <!-- 三分钟热度： 动机如果就是“尝鲜”，第一次行动后，这个目的达到了，坚持下去的动机就不复存在了，所以才表现为三分钟热度。 如果确实是打算养成习惯，就没有激励也不行。 -->
+
