--- a/blog-reading/FBM/2.md
+++ b/blog-reading/FBM/2.md
@@ -14,13 +14,13 @@
 
 - 可以立刻行动
 
-毛伊习惯（Maui Habit）：清晨起床立刻说出：“今天又是美好的一天！”
-
-习惯模板：在……时候→我会……
+>毛伊习惯（Maui Habit）：清晨起床立刻说出：“今天又是美好的一天！”
+>
+>习惯模板：在……时候→我会……
 
 - 无需担心失败
 
-蜥蜴脑善于判断一件事完成的困难程度，如果过于困难，就不想开始了。
+>蜥蜴脑善于判断一件事完成的困难程度，如果过于困难，就不想开始了。
 
 - 每次咬一小口，积少成多
 
@@ -28,6 +28,8 @@
 
 
 ## 微习惯
+
+
 
 ## 行为的奥秘：ABC三步骤 the anatomy of tiny habits
 
