--- a/blog-reading/FBM/4.md
+++ b/blog-reading/FBM/4.md
@@ -33,7 +33,7 @@
 
 ![](4_files/1.png)
 
-## 焦点地图
+<!-- ## 焦点地图
 
 - 第一回合
   
@@ -43,9 +43,9 @@
 
 >
 
-- 第三回合
+- 第三回合 
 
 >
 
-## 黄金行为
+## 黄金行为-->
 
