--- a/blog-reading/FBM/5.md
+++ b/blog-reading/FBM/5.md
@@ -1,3 +1,42 @@
 # 能力：让行为简单到随时都能做
 
 
+- 小改变也许没那么吸引人，但这是一种可持续的成功。
+
+- 很多人仍然抱有不做的事就干脆放弃的心态，因此，想不到如何从小事入手。
+
+- 每一个陷入动机怪圈的人，情绪都复杂多变。谨防陷入动机暴涨暴跌的恶性循环。
+
+- 使用微习惯策略，调整能力值，让事情变得简单易做。
+
+
+时间、资金、体力、脑力、日程
+
+
+## 实现“容易做”的3种方式
+
+1. 提升技能
+
+- 驾驭动机波浪，在动机最强烈的时候开始行动。
+
+2. 获取工具和资源
+
+- 一个难以坚持的工具会产生决策疲劳。
+
+- 故事中周末备餐的的例子可以在b站上搜索相关视频，有健康科学的菜谱供参考。关键词：一周便当。
+
+- 利用新工具让常规事物变得高效有趣。如：用工具加速备餐，使用扫地机器人、吸尘器等。
+
+3. 让行为变得微小。
+
+1) 入门步骤：
+
+穿上跑鞋以准备出门；
+
+休假在家时按时起床、穿戴整齐以开始高效的一天。
+
+2)缩小规模
+
+用牙线清洁一颗牙以清洁所有牙齿；
+
+每天坚持背15个单词，再逐渐递增，简单而能够坚持比大量多次更要紧。
